@@ -1177,3 +1177,5 @@ ALTER TABLE vicidial_live_agents ADD last_inbound_call_time_filtered DATETIME;
 ALTER TABLE vicidial_live_agents ADD last_inbound_call_finish_filtered DATETIME;
 
 UPDATE system_settings SET db_schema_version='1577',db_schema_update_date=NOW() where db_schema_version < 1577;
+
+UPDATE vicidial_screen_colors SET web_logo="SNCT.png";
